# VersionControlledContainerizedPythonManager

./: requirements.txt  setup.cfg
src/austin_heller_repo/: version_controlled_containerized_python_manager.py
src/austinhellerrepo/: version_controlled_containerized_python_manager.py
src/version_controlled_containerized_python_manager_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: version_controlled_containerized_python_manager_test.py
