[metadata]
name = version-controlled-containerized-python-manager-austinhellerrepo
version = 0.0.5
author = Austin Heller
description = A package that provides management of a python container existing in a remote repository
url = https://github.com/AustinHellerRepo/VersionControlledContainerizedPythonManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  git-manager-austinhellerrepo@git+https://github.com/AustinHellerRepo/GitManager
  docker-manager-austinhellerrepo@git+https://github.com/AustinHellerRepo/DockerManager
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading

[options.packages.find]
where = src
